--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body> 
     
     <header>
-    <img src="/img/logo.png" alt=""  width="40%" height="40%"/>
+    <img src="./img/logo.png" alt=""  width="40%" height="40%"/>
     <h1>CHANNELS</h1>
     
     <header>
